--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Fancy hover boxes</title>
@@ -7,9 +8,32 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap+Condensed:400,600" rel="stylesheet">
 </head>
+
 <body>
 
-
-
+<section>
+  <a class="hover-box" href="#">
+    <img src="iamges/orange.jpg" alt="A photograph of a orange butterfly">
+  </a>
+  <h2>butterflies</h2>
+</section>
+<section>
+  <a class="hover-box" href="#">
+    <img src="iamges/black.jpg" alt="A photograph of a black butterfly">
+  </a>
+  <h2>butterflies</h2>
+</section>
+<section>
+  <a class="hover-box" href="#">
+    <img src="iamges/blue.jpg" alt="A photograph of a blue butterfly">
+  </a>
+  <h2>butterflies</h2>
+</section>
+<section>
+  <a class="hover-box" href="#">
+    <img src="iamges/yellow.jpg" alt="A photograph of a yellow butterfly">
+  </a>
+  <h2>butterflies</h2>
+</section>
 </body>
 </html>
