--- a/index.html
+++ b/index.html
@@ -13,27 +13,26 @@
 
 <section>
   <a class="hover-box" href="#">
-    <img src="iamges/orange.jpg" alt="A photograph of a orange butterfly">
+    <img src="images/orange.jpg" alt="A photograph of a orange butterfly">
+    <h2>Orange butterflies</h2>
   </a>
-  <h2>butterflies</h2>
-</section>
-<section>
+
   <a class="hover-box" href="#">
-    <img src="iamges/black.jpg" alt="A photograph of a black butterfly">
+    <img src="images/black.jpg" alt="A photograph of a black butterfly">
+    <h2>Black butterflies</h2>
   </a>
-  <h2>butterflies</h2>
-</section>
-<section>
+
+
   <a class="hover-box" href="#">
-    <img src="iamges/blue.jpg" alt="A photograph of a blue butterfly">
+    <img src="images/blue.jpg" alt="A photograph of a blue butterfly">
+    <h2>Blue butterflies</h2>
   </a>
-  <h2>butterflies</h2>
-</section>
-<section>
+
   <a class="hover-box" href="#">
-    <img src="iamges/yellow.jpg" alt="A photograph of a yellow butterfly">
+    <img src="images/yellow.jpg" alt="A photograph of a yellow butterfly">
+    <h2>Yellow butterflies</h2>
   </a>
-  <h2>butterflies</h2>
+
 </section>
 </body>
 </html>
